Improved statusbar a bit. Dampening should prevent flickering.

--- a/webroot/StatusBar.css
+++ b/webroot/StatusBar.css
@@ -7,5 +7,5 @@
 	background: red;
 	border-radius: 0 0 10px 10px;
 	box-shadow: 5px 5px 5px #ccc;
-	z-index: 1
+	z-index: 2
 }
